2009-09-29 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpContext.cs: try to load App_GlobalResouces.dll if it has not
	been set but it exists in 'bin'.

2009-09-28  Marek Habersack  <mhabersack@novell.com>

	* HttpContext.cs: GetResourceProvider - renamed the 'key' argument
	to 'virtualPath' in order to reflects its purpose better. Local
	resource providers are created for the passed virtualPath and not
	for the current request's path. Fixes bug #542484

2009-09-25  Marek Habersack  <mhabersack@novell.com>

	* StaticSiteMapProvider.cs: MapUrl must normalize paths. Fixes bug
	#541969

	* XmlSiteMapProvider.cs: siteMapFile parameter must be mapped in
	Initialize. Fixes bug #541969

2009-09-24  Marek Habersack  <mhabersack@novell.com>

	* XmlSiteMapProvider.cs: added "securityTrimmingEnabled" to the
	list of supported attributes in Initialize. Fixes bug #541607

2009-09-07  Marek Habersack  <mhabersack@novell.com>

	* HttpContext.cs: when creating local resource provider, pass the
	current file's virtual path to CreateLocalResourceProvider. Fixes
	bug #536757

	* XmlSiteMapProvider.cs: do not allow the provider to be
	intialized more than once.
	Initialize throws if it finds unknown attributes in the
	'attributes' collection.
	AddNode checks its arguments and throws if they are null or aren't
	from the same provider.
	FindStartingNode throws exceptions in several erroneous situations
	now.
	Added private method GetConfigDocument which performs several
	checks on the source .sitemap file and throws exceptions if it
	finds any errors.
	BuildSiteMap clears provider state before building the map.
	BuildSiteMapRecursive correctly deals with custom providers. Fixes
	bug #465696
	FindSiteMapNode maps url before searching. Fixes bug #465696

	* VirtualPathUtility.cs: Combine a bit more efficient

	* StaticSiteMapProvider.cs: FindSiteMap node checks if rawUrl is
	relative to application root and if yes, makes it absolute.