@@ -1,3 +1,10 @@
+2009-09-29  Marek Habersack  <mhabersack@novell.com>
+
+	* HttpResponse.cs: use full url in redirect if
+	UseFullyQualifiedRedirectUrl is set to true in httpRuntime
+	configuration section. Patch from Brett Kiefer
+	<brett@fogcreek.com>, thanks! Fixes bug #542846
+
 2009-09-29 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
 	* HttpContext.cs: try to load App_GlobalResouces.dll if it has not
